--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -33,11 +33,13 @@
 		
 				
 		<dependency>
-
 			<groupId>org.openmrs.module</groupId>
-						
 			<artifactId>uiframework-api</artifactId>
-												
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>appframework-api</artifactId>
 		</dependency>
 						
 		<!-- End OpenMRS modules -->
