--- a/pom.xml
+++ b/pom.xml
@@ -53,16 +53,19 @@
 			
 						
 			<!-- Begin OpenMRS modules -->
-			
-						
+
 			<dependency>
-			
 				<groupId>org.openmrs.module</groupId>
-												
 				<artifactId>uiframework-api</artifactId>
-																								
 				<version>1.2</version>
-												
+				<scope>provided</scope>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>appframework-api</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<scope>provided</scope>
 			</dependency>
 						
 			<!-- End OpenMRS modules -->
