--- a/pom.xml
+++ b/pom.xml
@@ -57,14 +57,14 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>uiframework-api</artifactId>
-				<version>1.3-SNAPSHOT</version>
+				<version>1.3</version>
 				<scope>provided</scope>
 			</dependency>
 			
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>appframework-api</artifactId>
-				<version>1.0-SNAPSHOT</version>
+				<version>1.0</version>
 				<scope>provided</scope>
 			</dependency>
 						
