--- a/api/pom.xml
+++ b/api/pom.xml
@@ -22,7 +22,7 @@
 			<artifactId>library-name</artifactId>
 		</dependency> 
 		-->
-				
+						
 		<!-- Begin OpenMRS modules -->
 
 		<dependency>
@@ -35,6 +35,10 @@
 			<artifactId>appframework-api</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>metadatasharing-api</artifactId>
+		</dependency>
 
 		<!-- End OpenMRS modules -->
 		
@@ -73,7 +77,7 @@
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
-				
+					
 		<!-- End OpenMRS core -->
 		
 	</dependencies>
@@ -82,7 +86,17 @@
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>**/*.zip</exclude>
+				</excludes>
 				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.zip</include>
+				</includes>
+				<filtering>false</filtering>
 			</resource>
 		</resources>
 
