--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 				<version>1.0</version>
 				<scope>provided</scope>
 			</dependency>
+			
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>metadatasharing-api</artifactId>
+				<version>1.0.8-SNAPSHOT</version>
+				<scope>provided</scope>
+			</dependency>
 						
 			<!-- End OpenMRS modules -->
 			
