--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>appframework-api</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>htmlformentry-api</artifactId>
+		</dependency>
 						
 		<!-- End OpenMRS modules -->
 		
