--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
 				<version>1.0.8-SNAPSHOT</version>
 				<scope>provided</scope>
 			</dependency>
+			
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>htmlformentry-api</artifactId>
+				<version>1.9.3</version>
+				<scope>provided</scope>
+			</dependency>
 						
 			<!-- End OpenMRS modules -->
 			
