--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 	
 	<properties>
 		<openMRSVersion>1.9.0-RC4</openMRSVersion>
-		<uiframeworkVersion>1.4</uiframeworkVersion>
-		<uilibraryVersion>1.2</uilibraryVersion>
+		<uiframeworkVersion>1.5-SNAPSHOT</uiframeworkVersion>
+		<uilibraryVersion>1.3-SNAPSHOT</uilibraryVersion>
 		<appframeworkVersion>1.1</appframeworkVersion>
 		<metadatasharingVersion>1.0.8-SNAPSHOT</metadatasharingVersion>
 		<htmlformentryVersion>1.9.4</htmlformentryVersion>
