--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -51,6 +51,11 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>metadatasharing-api</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>moduledistro-api</artifactId>
+		</dependency>
 						
 		<!-- End OpenMRS modules -->
 		
