--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -50,7 +50,14 @@
 												url="https://modules.openmrs.org/modules/download/htmlformentry/htmlformentry-${htmlformentryVersion}.omod" />
 											<url
 												url="https://modules.openmrs.org/modules/download/htmlformentry19ext/htmlformentry19ext-${htmlformentry19extVersion}.omod" />
+											<url
+												url="https://modules.openmrs.org/modules/download/reporting/reporting-${reportingVersion}.omod" />
+											<url
+												url="https://modules.openmrs.org/modules/download/htmlwidgets/htmlwidgets-${htmlwidgetsVersion}.omod" />
+											<url
+												url="https://modules.openmrs.org/modules/download/serialization.xstream/serialization.xstream-${serializationxstreamVersion}.omod" />
 											<!-- <url url="https://modules.openmrs.org/modules/download/metadatasharing/metadatasharing-${metadatasharingVersion}.omod"/> -->
+											<!-- <url url="https://modules.openmrs.org/modules/download/calculation/calculation-${calculationVersion}.omod"/> -->
 										</get>
 									</target>
 								</configuration>
