--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -56,6 +56,11 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>moduledistro-api</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs</groupId>
+			<artifactId>calculation-api</artifactId>
+		</dependency>
 						
 		<!-- End OpenMRS modules -->
 		
