groupId for calculation module was renamed

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -41,7 +41,7 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.openmrs</groupId>
+			<groupId>org.openmrs.module</groupId>
 			<artifactId>calculation-api</artifactId>
 		</dependency>
 		
