--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.openmrs</groupId>
+				<groupId>org.openmrs.module</groupId>
 				<artifactId>calculation-api</artifactId>
 				<version>${calculationVersion}</version>
 				<scope>provided</scope>
