--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -58,7 +58,7 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.openmrs</groupId>
+			<groupId>org.openmrs.module</groupId>
 			<artifactId>calculation-api</artifactId>
 		</dependency>
 						
