--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
 	<properties>
 		<openMRSVersion>1.9.0</openMRSVersion>
-		<uiframeworkVersion>1.5</uiframeworkVersion>
+		<uiframeworkVersion>1.6-SNAPSHOT</uiframeworkVersion>
 		<uilibraryVersion>1.3</uilibraryVersion>
 		<appframeworkVersion>1.2</appframeworkVersion>
 		<metadatasharingVersion>1.0.8-SNAPSHOT</metadatasharingVersion>
