--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 	<properties>
 		<openMRSVersion>1.9.0</openMRSVersion>
 		<uiframeworkVersion>1.6-SNAPSHOT</uiframeworkVersion>
-		<uilibraryVersion>1.3</uilibraryVersion>
+		<uilibraryVersion>1.4-SNAPSHOT</uilibraryVersion>
 		<appframeworkVersion>1.2</appframeworkVersion>
 		<metadatasharingVersion>1.0.8-SNAPSHOT</metadatasharingVersion>
 		<htmlformentryVersion>1.9.4</htmlformentryVersion>
@@ -46,7 +46,7 @@
 		<reportingVersion>0.7.1.1</reportingVersion>
 		<htmlwidgetsVersion>1.6.0</htmlwidgetsVersion>
 		<serializationxstreamVersion>0.2.6</serializationxstreamVersion>
-		<idgenVersion>2.1</idgenVersion>
+		<idgenVersion>2.3-SNAPSHOT</idgenVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -118,7 +118,7 @@
 		
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
-			<artifactId>idgen</artifactId>
+			<artifactId>idgen-api</artifactId>
 			<version>${idgenVersion}</version>
 			<scope>provided</scope>
 		</dependency>
