--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<reportingVersion>0.7.1.1</reportingVersion>
 		<htmlwidgetsVersion>1.6.0</htmlwidgetsVersion>
 		<serializationxstreamVersion>0.2.6</serializationxstreamVersion>
-		<idgenVersion>2.3-SNAPSHOT</idgenVersion>
+		<idgenVersion>2.1</idgenVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -119,7 +119,7 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>idgen-api</artifactId>
-			<version>${idgenVersion}</version>
+			<version>2.3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
