--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<uilibraryVersion>1.4-SNAPSHOT</uilibraryVersion>
 		<appframeworkVersion>1.3-SNAPSHOT</appframeworkVersion>
 		<metadatasharingVersion>1.0.8-SNAPSHOT</metadatasharingVersion>
-		<htmlformentryVersion>1.9.5-SNAPSHOT</htmlformentryVersion>
+		<htmlformentryVersion>1.10.0</htmlformentryVersion>
 		<htmlformentry19extVersion>0.9</htmlformentry19extVersion>
 		<moduledistroVersion>1.2</moduledistroVersion>
 		<calculationVersion>1.0-SNAPSHOT</calculationVersion>
