Hack support for uploading MFL

--- a/pom.xml
+++ b/pom.xml
@@ -176,12 +176,20 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>net.sf.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>2.0</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.2-FINAL</version>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
