--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -31,48 +31,76 @@
 			</dependencies>
 			<build>
 				<plugins>
-					<plugin>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.7</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<configuration>
-									<target>
-										<get dest="target/distro" verbose="true" usetimestamp="true">
-											<url
-												url="https://modules.openmrs.org/modules/download/uiframework/uiframework-${uiframeworkVersion}.omod" />
-											<url
-												url="https://modules.openmrs.org/modules/download/uilibrary/uilibrary-${uilibraryVersion}.omod" />
-											<url
-												url="https://modules.openmrs.org/modules/download/appframework/appframework-${appframeworkVersion}.omod" />
-											<url
-												url="https://modules.openmrs.org/modules/download/htmlformentry19ext/htmlformentry19ext-${htmlformentry19extVersion}.omod" />
-											<url
-												url="https://modules.openmrs.org/modules/download/reporting/reporting-${reportingVersion}.omod" />
-											<url
-												url="https://modules.openmrs.org/modules/download/htmlwidgets/htmlwidgets-${htmlwidgetsVersion}.omod" />
-											<url
-												url="https://modules.openmrs.org/modules/download/serialization.xstream/serialization.xstream-${serializationxstreamVersion}.omod" />
-											<url
-												url="https://modules.openmrs.org/modules/download/metadatasharing/metadatasharing-${metadatasharingVersion}.omod"/>
-											<url
-												url="https://modules.openmrs.org/modules/download/idgen/idgen-${idgenVersion}.omod" />
-											<url
-												url="https://modules.openmrs.org/modules/download/htmlformentry/htmlformentry-${htmlformentryVersion}.omod" />
-											<url
-												url="https://modules.openmrs.org/modules/download/calculation/calculation-${calculationVersion}.omod"/>
-											<url
-												url="https://modules.openmrs.org/modules/download/moduledistro/moduledistro-${moduledistroVersion}.omod"/>	
-										</get>
-									</target>
-								</configuration>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
+
+                    <!--
+                    Copy all of the modules we depend on (this also gets extra jars we don't need).
+                    We'll end up with things like "reporting-omod-0.7.2.1.jar".
+                     -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>2.4</version>
+                        <executions>
+                            <execution>
+                                <id>copy-dependencies</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+                                    <includeGroupIds>org.openmrs.module</includeGroupIds>
+                                    <includeScope>provided</includeScope>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <!--
+                    Rename things like "reporting-omod-0.7.2.1.jar" to "reporting-0.7.2.1.omod".
+                    This also drops everything that doesn't match "*-omod-*.jar"
+                    -->
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <id>rename-jars-to-omod</id>
+                                <phase>package</phase>
+                                <configuration>
+                                    <target>
+                                        <move todir="${project.build.directory}/distro">
+                                            <fileset dir="${project.build.directory}/dependencies"/>
+                                            <mapper type="regexp" from="^(.+)-omod-(.+)\.jar" to="\1-\2.omod"/>
+                                        </move>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                            <!-- For some reason the serialization.xstream-omod artifact is .omod, not .jar -->
+                            <execution>
+                                <id>rename-omods-to-omod</id>
+                                <phase>package</phase>
+                                <configuration>
+                                    <target>
+                                        <move todir="${project.build.directory}/distro">
+                                            <fileset dir="${project.build.directory}/dependencies"/>
+                                            <mapper type="regexp" from="^(.+)-omod-(.+)\.omod" to="\1-\2.omod"/>
+                                        </move>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <!--
+                    Also get the omod file that we built.
+                    -->
 					<plugin>
 						<artifactId>maven-resources-plugin</artifactId>
 						<version>2.5</version>
@@ -105,6 +133,10 @@
 							</execution>
 						</executions>
 					</plugin>
+
+                    <!--
+                    Assemble all of these omods into a zip file
+                    -->
 					<plugin>
 						<artifactId>maven-assembly-plugin</artifactId>
 						<version>2.3</version>
