Include feature to allow graphical presentation of weight and CD4 at the medical chart point

--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -63,7 +63,10 @@
 											<url
 												url="https://modules.openmrs.org/modules/download/calculation/calculation-${calculationVersion}.omod"/>
 											<url
-												url="https://modules.openmrs.org/modules/download/moduledistro/moduledistro-${moduledistroVersion}.omod"/>	
+												url="https://modules.openmrs.org/modules/download/moduledistro/moduledistro-${moduledistroVersion}.omod"/>
+											<url
+												url="https://modules.openmrs.org/modules/download/patientsummary/patientsummary-${patientsummaryVersion}.omod"/>	
+												
 										</get>
 									</target>
 								</configuration>
